--- a/style.css
+++ b/style.css
@@ -70,6 +70,20 @@ body{
     font-size: 20px;
 }
 
+#column3 {
+    float: left;
+    color: #333;
+    border: 1px solid # ccc;
+    background: #F2F2E6;
+    margin: 10px 0px 10px 0px;
+    padding: 10px;
+    height: 400px;
+    width: 800px;
+    display: inline;
+    position: relative;
+    font-size: 30px;
+}
+
 a img:hover:not([href^="Pics/twitter.png"]) {
 		height: 10%;
 		width: 10%;
