--- a/style.css
+++ b/style.css
@@ -82,12 +82,11 @@ body{
     display: inline;
     position: relative;
     font-size: 30px;
-	text-align:center
 }
 
-img:hover,
+/* img:hover,
 img:focus{
   width:200%;
   height: 200%;
-}
+}*/
 
