--- a/style.css
+++ b/style.css
@@ -1,92 +1,53 @@
-body{
-		background-color: #ffecb3;
-		font-size: 30px;
-		font-family: 'Comfortaa', cursive;
-	}
-
-#column_container {
-    width: 1100px;
-    margin: 0 auto;
+body {
+  background-color: #ffecb3;
+  font-size: 30px;
+  font-family: "Comfortaa", cursive;
+  width: 100vw;
+  height: auto;
+  margin: 0;
+  padding: 0;
 }
 
-#header {
-    position: absolute; 
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100px;
-    background: #cc0000;
-    text-align: center;
+.page {
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
-#wrapper {
-    margin: 50px;
-    width: 1280px;
+.column_container {
+  width: 100%;
+  margin: 0 auto;
+
+  display: flex;
+  flex-direction: row;
 }
 
-#column1 {
-    float: left;
-    background - image: url("../img/gray.png");
-    margin: 10px 0px 10px 0px;
-    padding: 10px;
-    height: 475px;
-    width: 400px;
+@media (max-width: 768px) {
+  .column_container {
+    flex-direction: column;
+  }
 }
 
-#column2 {
-    float: left;
-    color: #333;
-    border: 1px solid # ccc;
-    background: #F2F2E6;
-    margin: 10px 0px 10px 0px;
-    padding: 10px;
-    height: 475px;
-    width: 600px;
-    display: inline;
-    position: relative;
-    font-size: 20px;
+.column_first {
+  margin: 10px 0px 10px 0px;
+  padding: 10px;
+  max-width: 400px;
+  /* height: 100%; */
 }
 
-#column1_games {
-    float: left;
-    background - image: url("../img/gray.png");
-    margin: 10px 0px 10px 0px;
-    padding: 10px;
-    height: 400px;
-    width: 400px;
+.column_second {
+  color: #333;
+  background: #f2f2e6;
+  margin: 10px 0px 10px 0px;
+  padding: 10px;
+  position: relative;
+  font-size: 20px;
 }
 
-#column2_games {
-    float: left;
-    color: #333;
-    border: 1px solid # ccc;
-    background: #F2F2E6;
-    margin: 10px 0px 10px 0px;
-    padding: 10px;
-    height: 400px;
-    width: 600px;
-    display: inline;
-    position: relative;
-    font-size: 20px;
+#contact_list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-#column3 {
-    float: left;
-    /*color: #333;*/
-    border: 1px solid # ccc;
-    margin: 10px 0px 10px 0px;
-    padding: 10px;
-    /*height: 400px;
-    width: 800px;*/
-    display: inline;
-    position: relative;
-    font-size: 30px;
-	text-align: center;
+#contact_list > * {
+  display: block;
 }
-
-/* img:hover,
-img:focus{
-  width:200%;
-  height: 200%;
-}*/
-
